--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,36 @@
 :root{
     background-color: #abcdef;
+
+    --board-width: 500px;
+
 }
 
 .container{
     height: 100vh;
     min-height: 100%;
-    display: grid;
-    justify-items: center;
+    width: var(--board-width);
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
     align-items: center;
+}
+
+.headings{
+    text-align:center;
+    margin-bottom: 20px;
+}
+
+h1{
+    font-size: 2rem;
+}
+
+h2{
+    font-size: 1.5rem;
+}
+
+h3{
+    font-size: 1.25rem;
 }
 
 #game-container{
