--- a/styles.css
+++ b/styles.css
@@ -103,9 +103,10 @@ h3{
         > *{
             display:grid;
             align-items: center;
+            gap:5px;
         }
 
-        button{
+        > button{
             grid-column-start: 2;
         }
 
@@ -116,4 +117,21 @@ h3{
 
 #status{
     margin: 10px 0 20px 0;
+}
+
+.symbol-select{
+    display: grid;
+    gap:2px;
+    
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-flow: column;
+
+    button{
+        width: 100%;
+        aspect-ratio: 1;
+    }
+}
+
+.smiley{
+    transform: rotate(90deg);
 }
