Change plyr x/o to 1/2, rewrite symbol select
Goal was to simplify player naming with 1/2
instead of using default symbol as name
Symbol select was reliant on DOM. Rewrote it to
store symbol chars in JS logic

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ h3{
             grid-column-start: 2;
         }
 
-        #playerO-input{
+        #player2-input{
             grid-column-start: 3;
         }
 }
