--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
     --board-width: 50%;
 
     font-family: 'Architects Daughter', cursive;
+
+    --player1Color: rgb(255, 197, 197);
+    --player2Color: rgb(197, 225, 255);
     
 
 }
@@ -60,14 +63,7 @@ h3{
     aspect-ratio: 3.333;
 }
 
-#game-btn{
-    width: 70%;
-    background-color: rgb(177, 227, 189);
-}
 
-#game-btn:hover{
-    background-color: rgb(168, 244, 186);
-}
 
 #game-container{
     display: grid;
@@ -128,7 +124,8 @@ h3{
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
-    column-gap: 10px;
+    column-gap: 15px;
+    row-gap:5px;
 
     .player-input{
         display:grid;
@@ -152,15 +149,29 @@ h3{
         border-color: rgb(197, 225, 255);
     }
 
-    > button{
-            grid-column-start: 2;
+    > #button-div{
+            grid-column-start: 1;
+            grid-column-end: -1;
+            grid-row-start: 3;
+            display: grid;
+            grid-auto-flow: column;
+            grid-template-columns: 1fr 2fr 1fr;
+            justify-content: space-around;
+            align-items: center;
+            width: 40%;
+    }
+
+    #game-btn{
+        background-color: rgb(177, 227, 189);
+    }
+    
+    #game-btn:hover{
+        background-color: rgb(168, 244, 186);
     }
 
     #swap-players{
-        padding:0 10px;
         background-color: rgb(246, 209, 176);
         color: black;
-        font-size: 1.4em;
         transform: scale(0.85);
     }
 
@@ -168,10 +179,39 @@ h3{
         background-color:rgb(246, 186, 136);
     }
 
-    #status-msg{
+    #clear-inputs{
+        background-color: #d0d0d0;
+        color: black;
+        transform: scale(0.85);
+    }
+    #clear-inputs:hover{
+        background-color: #ececec;
+    }
+
+    #status{
         text-align: center;
         grid-row-start: 2;
         grid-column-start: 2;
+        width:100%;
+        height:100%;
+        padding:0 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px transparent #fff;
+    }
+
+    #status.player1{
+        background-color: var(--player1Color);
+        border: 2px solid firebrick;
+    }
+    #status.player2{
+        background-color: var(--player2Color);
+        border: 2px solid cornflowerblue;
+    }
+
+    #status-msg{
+        
     }
 
     #player2-input{
@@ -183,9 +223,6 @@ h3{
     }
 }
 
-#status{
-    margin: 10px 0 20px 0;
-}
 
 .symbol-select{
     display: grid;
@@ -197,6 +234,10 @@ h3{
     button{
         width: 100%;
         aspect-ratio: 1;
+        background-color: rgb(255,255,197);
+    }
+    button:hover{
+        background-color: rgb(247, 247, 165);
     }
 }
 
@@ -205,22 +246,12 @@ h3{
     display: inline-block;
 }
 
-.symbol-select{
-    button{
-    background-color: rgb(255,255,197);
-    }
-
-    button:hover{
-        background-color: rgb(247, 247, 165);
-    }
-}
-
 #player1-input button.selected{
-    background-color: rgb(255, 197, 197);
+    background-color: var(--player1Color);
 }
 
 #player2-input button.selected{
-    background-color: rgb(197, 225, 255);
+    background-color: var(--player2Color);
 }
 
 #result-dialog{
